<resources>
    <string name="app_name">FintechHomeWork2</string>

    <string name="share_text">share text</string>
    <string name="text_result_from_activity">Text result from Activity</string>
    <string name="start_activity_for_result">start activity for result</string>
    <string name="type_text">Type text</string>
    <string name="start_activity_with_flag_single_top">activity single top</string>
    <string name="start_activity_with_flag_new_task">activity new task</string>
    <string name="start_activity_with_flag_clear_task">activity new task and clear</string>
    <string name="click_me">click me</string>
    <string name="cancel">Cancel</string>
</resources>
